writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/no_return_value.c
 
int foo(void) {
    
    int x = 1;
}

int main(void) {
 
    foo();
    return 3;
}