writing-a-c-compiler-tests/tests/chapter_9/invalid_types/too_few_args.c
int foo(int a, int b) {
    return a + 1;
}

int main(void) {
 
    return foo(1);
}